<resources>
    <string name="app_name">TipCalculator_Codelab</string>
    <string name="tip_amount">Tip Amount : %s</string>
    <string name="calculate">Calculate</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="okay_10">Okay (10%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="cost_of_service">cost of service</string>
</resources>